Move all font files into the same dir. Fix Peter’s The Cube manual display on mobile/narrow screens.

--- a/More/Logfile Analyzer.css
+++ b/More/Logfile Analyzer.css
@@ -59,12 +59,12 @@
 /* Used by Skyrim only */
 @font-face {
     font-family: 'DragonAlphabet';
-    src: url('font/dragon_alphabet.ttf');
+    src: url('../HTML/font/dragon_alphabet.ttf');
 }
 /* Used by The Cube only */
 @font-face {
     font-family: 'KRA';
-    src: url('../HTML/img/The Cube/KR_A_Round.ttf');
+    src: url('../HTML/font/KR_A_Round.ttf');
 }
 
 
